# plonkweb

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
integration-tests/: Cargo.toml  generate-proof.mjs
integration-tests/example/: index.html  server.mjs  test_circuit_wasm.rs
integration-tests/src/: lib.rs  test_circuit.rs
integration-tests/tests/: js_proof_verification.rs
plonkjs/: package.json
plonkjs/src/: index.mjs
plonkwasm/: Cargo.toml  README.md
plonkwasm/src/: lib.rs
plonkwasm/tests/: prove.rs
transfer-wasm/: Cargo.toml  README.md
transfer-wasm/example/: transfer_wasm.rs
transfer-wasm/src/: lib.rs
