[package]
name = "plonk-integration-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
dusk-bytes = "0.1"
dusk-plonk = { version = "=0.22.0", default-features = false, features = ["alloc"] }
plonkwasm = { path = "../plonkwasm" }
rand_chacha = "0.3"
rand_core = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[example]]
name = "test_circuit_wasm"
path = "example/test_circuit_wasm.rs"
crate-type = ["cdylib"]
test = false
