[package]
name = "plonk-integration-tests"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
publish = false

[dependencies]
dusk-bytes = "0.1"
dusk-plonk = { version = "=0.23.0", default-features = false, features = ["alloc", "bls-backend-blst"] }
plonkwasm = { path = "../plonkwasm", features = ["bls-backend-blst"] }
rand_chacha = "0.3"
rand_core = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-rayon = { version = "1.3", features = ["no-bundler"], optional = true }
# Pulled in transitively by `dusk-plonk/std` (via dusk-bls12_381's default
# features). Declared here so feature unification turns on the `js` feature,
# which is mandatory on `wasm32-unknown-unknown`.
getrandom = { version = "0.2", features = ["js"], optional = true }

[features]
default = []
# `dusk-plonk/std` (not `dusk-plonk/rayon`) is what actually enables the
# `par_iter` code paths inside dusk-plonk; see plonkwasm/Cargo.toml for details.
wasm-rayon = ["dusk-plonk/std", "plonkwasm/wasm-rayon", "dep:wasm-bindgen-rayon", "dep:getrandom"]

[[example]]
name = "test_circuit_wasm"
path = "example/test_circuit_wasm.rs"
crate-type = ["cdylib"]
test = false
