[package]
name = "plonkwasm"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
license = "MPL-2.0"
description = "WebAssembly wrapper for dusk-plonk."
repository = "https://github.com/dusk-network/plonkweb"
documentation = "https://docs.rs/plonkwasm"
readme = "../README.md"
keywords = ["plonk", "wasm", "zero-knowledge", "dusk"]
categories = ["cryptography", "wasm"]
include = ["Cargo.toml", "src/**/*.rs", "tests/**/*.rs", "../README.md"]

[dependencies]
dusk-bytes = "0.1"
dusk-plonk = { version = "=0.22.0", default-features = false, features = ["alloc"] }
rand_chacha = "0.3"
rand_core = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = []
# dusk-plonk gates every `par_iter` / rayon code path behind `cfg(feature = "std")`
# (the `rayon` name in dusk-plonk's manifest is only the optional crate dep, not a
# feature that toggles parallel code). Enabling `dusk-plonk/std` is therefore
# required for the wasm build to actually run anything in parallel.
wasm-rayon = ["dusk-plonk/std"]
